# RayTracer

./: .gitignore  CMakeLists.txt  Config.hpp.in  GNUmakefile  Makefile  README.md  make.py  old_GNUmakefile  times.txt
scenes/: default.json  random.json  simple.json
src/: Config.hpp.in  RayTracer.cpp  Renderer.cpp  SceneCreator.cpp
src/lib/: Animation.cpp  BoundingBox.cpp  CMakeLists.txt  Camera.cpp  CameraMovement.cpp  EfficientCamera.cpp  Frames.cpp  Image.cpp  LodePNG.cpp  LodePNG1.cpp  Material.cpp  ObjectTree.cpp  ProgressBar.cpp  Random.cpp  Ray.cpp  RenderAnimation.cpp  RenderAnimaton.cpp  RenderObject.cpp  RenderObjectCollection.cpp  RenderWorld.cpp  Renderer.cpp  Shape.cpp  Sphere.cpp  StringError.cpp  ThreadPool.cpp  Vec3.cpp  WorldIO.cpp  lodepng.cpp
src/lib/animations/: CMakeLists.txt  CameraMovement.cpp
src/lib/animations/camera/: CMakeLists.txt  CameraRotation.cpp
src/lib/include/: Animation.hpp  BoundingBox.hpp  Camera.hpp  CameraMovement.hpp  Config.hpp  EfficientCamera.hpp  Frames.hpp  HitRecord.hpp  Image.hpp  JSONExceptions.hpp  Material.hpp  ObjectTree.hpp  ProgressBar.hpp  Random.hpp  Ray.hpp  RenderAnimation.hpp  RenderObject.hpp  RenderObjectCollection.hpp  RenderWorld.hpp  Renderer.hpp  Shape.hpp  Sphere.hpp  StringError.hpp  ThreadPool.hpp  Vec3.hpp  WorldIO.hpp  cxxopts.hpp
src/lib/include/animations/: CameraMovement.hpp
src/lib/include/animations/camera/: CameraRotation.hpp
src/lib/include/materials/: Dielectric.hpp  Lambertian.hpp  Metal.hpp
src/lib/include/objects/: RenderObjectCollection.hpp  Sphere.hpp
src/lib/include/scenes/: RandomScene.hpp
src/lib/materials/: CMakeLists.txt  Dielectric.cpp  Lambertian.cpp  Metal.cpp
src/lib/objects/: CMakeLists.txt  RenderObjectCollection.cpp  Sphere.cpp
src/lib/scenes/: CMakeLists.txt  RandomScene.cpp  random.cpp
tests/src/: test_animation.cpp  test_frames.cpp  test_image.cpp  test_json.cpp  test_progressbar.cpp  test_vector_math.cpp
